--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 body {
   text-align: center;
+  /*
+  background: url(https://res.cloudinary.com/dku8gae8u/image/upload/v1680544136/react-coder/fondo_banner_i6csxp.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  */
 }
